--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "gh-pages -d build",
+    "predeploy": ""
   },
   "repository": {
     "type": "git",
@@ -16,8 +18,11 @@
   "bugs": {
     "url": "https://github.com/aviadgawl/AviadsLab/issues"
   },
-  "homepage": "https://github.com/aviadgawl/AviadsLab#readme",
+  "homepage": "https://github.com/aviadgawl/JavaScriptLab",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
