--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "deploy": "gh-pages -d build",
-    "predeploy": ""
+    "deploy": "node deploy-gh-pages.js"
   },
   "repository": {
     "type": "git",
